--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Retirar nomes do Serasa
 
 <br><br>
 
-<label>Insira o nome: <input id="inome"></label>
+<label>Insira o nome: <input id="inome"></label><br>
 <label>Insira o CPF:  <input id="icpf" type="number"></label>
 	  
 
