--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Concluído
 
 <div id="user" class="none">
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAEbo912SNlE28OayU-KnDZqjV5-KU3XqY-A&usqp=CAU" id="carinha">
-<p id="nome" class="info">ㅤㅤㅤㅤㅤNome: </p>
+<span id="nome" class="info">ㅤㅤㅤㅤㅤNome: </span>
 <span id="cpf" class="info"></span>
 <p class="info green" id="status">
 ㅤㅤㅤㅤㅤStatus: Nome sujo
